# weather

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  weather.py
.github/workflows/: main.yml
tests/: test_weather.py
